# qt-smart-calc

./: Doxyfile  Makefile  README.md
src/UI/calc/: CMakeLists.txt  creditcalc.cpp  creditcalc.h  creditcalc.ui  depositcalc.cpp  depositcalc.h  depositcalc.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/calc_logic/: s21_calc.c  s21_calc.h
src/calc_logic/bank_calc/: s21_credit_calc.c  s21_deposit_calc.c
src/calc_logic/bank_calc/include/: s21_credit_calc.h  s21_deposit_calc.h
src/calc_logic/stack/: s21_operators_stack.c  s21_stack.c
src/calc_logic/stack/include/: s21_operators_stack.h  s21_stack.h
src/calc_logic/translator/: s21_translator.c  s21_utils.c  s21_validation.c
src/calc_logic/translator/include/: translator.h
test/: test_s21_calc.c
